--- a/partials/_values.scss
+++ b/partials/_values.scss
@@ -17,4 +17,5 @@ $wrap-down-width: 640px;
 // Controls
 $form-control-margin: 0.5%;
 $form-control-padding: .5em 1em;
+$form-control-height: 36px;
 $active-color: map-get($colors, "blue");
